# CineMem-3-10

./: .gitignore  pyproject.toml  requirements.txt  testing.ipynb
cardio/: __init__.py
cardio/cli/: __init__.py  common.py  eval_vlm.py  generate_vqa.py  infer.py  pretrain.py  train_cls.py  train_reg.py  train_seg.py  train_vlm_s1.py  train_vlm_s2.py
cardio/data/: __init__.py  collate.py  constants.py  transform.py
cardio/data/datasets/: __init__.py  classification.py  jsonl_vl.py  regression.py  segmentation.py
cardio/data/io/: __init__.py  dicom.py  nifti.py  sitk.py
cardio/data/preprocess/: __init__.py  acdc.py  emidec.py  kaggle.py  landmark.py  mnms.py  mnms2.py  myops2020.py  rescan.py
cardio/data/vqa/: __init__.py  __main__.py  convert.py  ground_truth.py  hf_loader.py  memory_templates.py  paraphrase.py  prompts.py  reasoning.py  run.py  validate.py
cardio/eval/: __init__.py  metric.py  segmentation.py  vlm.py  vlm_cardiac.py
cardio/tools/: __init__.py  measure.py  segment.py
cardio/trainer/: __init__.py  finetune.py  grpo.py  optim.py  stage1_memory.py
cardio/trainer/rewards/: __init__.py  cardiac.py  composite.py  dcr.py  exact_match.py  memory_penalty.py  vprm.py
cardio/utils/: __init__.py  device.py  logging.py  misc.py
cardio/vision/: __init__.py  classification.py  convunetr.py  convvit.py  mae.py  metric.py  regression.py  segmentation.py  vit.py
cardio/vlm/: __init__.py  config.py  constants.py  dual_memory.py  lora_utils.py  memory_former.py  model.py  mrope_fix.py  query_builder.py  qwen_loader.py
configs/classification/: acdc.yaml  mnms.yaml  mnms2.yaml
configs/pretrain/: mae_ukb.yaml
configs/regression/: acdc.yaml  landmark.yaml  mnms.yaml  mnms2.yaml
configs/segmentation/: acdc.yaml  emidec.yaml  landmark.yaml  mnms.yaml  mnms2.yaml  myops2020.yaml  rescan.yaml
configs/vlm/: cinemem_qwen25vl7b.yaml
scripts/: push_to_hf.py  test_rewards_local.py
tests/: conftest.py  test_data_io.py  test_grpo.py  test_model_loading.py  test_mrope_fix.py  test_rewards_dcr.py  test_rewards_memory.py  test_rewards_vprm.py  test_vqa_categories.py
