[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cardio"
description = "CardioVLM: A Unified Vision-Language Model for Cardiac MRI."
requires-python = ">=3.10"
license = {text = "MIT"}
version = "2.0.0"

dependencies = [
    "accelerate>=0.33.0",
    "einops==0.8.1",
    "huggingface_hub",
    "hydra-core==1.3.2",
    "matplotlib==3.10.1",
    "monai==1.4.0",
    "nibabel==5.3.2",
    "numpy==1.26.4",
    "openai",
    "pandas==2.2.3",
    "peft>=0.12.0",
    "pillow>=10.0.0",
    "plotly==6.1.2",
    "pydicom==3.0.1",
    "python-dotenv",
    "pyyaml>=6.0.1",
    "rich==14.0.0",
    "safetensors==0.5.3",
    "scikit-image==0.25.2",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "SimpleITK==2.5.0",
    "timm==1.0.15",
    "torch>=2.1",
    "tqdm>=4.66.0",
    "transformers>=4.43.0",
    "wandb==0.19.11",
]

[project.optional-dependencies]
flash = ["flash-attn>=2.5.0"]
deepspeed = ["deepspeed>=0.14.0"]
dev = [
    "jupyterlab==4.4.3",
    "kaggle==1.7.4.5",
    "pre-commit==4.2.0",
    "ruff==0.11.12",
]
test = [
    "coverage==7.8.2",
    "nbmake==1.5.5",
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
    "pytest-mock==3.14.1",
]
all = [
    "cardio[flash,deepspeed,dev,test]",
]

[project.scripts]
cardio-pretrain = "cardio.cli.pretrain:main"
cardio-train-seg = "cardio.cli.train_seg:main"
cardio-train-cls = "cardio.cli.train_cls:main"
cardio-train-reg = "cardio.cli.train_reg:main"
cardio-train-vlm-s1 = "cardio.cli.train_vlm_s1:main"
cardio-train-vlm-s2 = "cardio.cli.train_vlm_s2:main"
cardio-eval-vlm = "cardio.cli.eval_vlm:main"
cardio-infer = "cardio.cli.infer:main"
cardio-generate-vqa = "cardio.cli.generate_vqa:main"

[tool.setuptools.packages.find]
include = ["cardio*"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
markers = [
    "integration",
]
filterwarnings = [
    "ignore::DeprecationWarning:tensorflow_metadata.*",
]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["misc","attr-defined","call-arg","name-defined","operator"]
show_error_codes = true
files = "**/*.py"

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4

target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN002",  # MissingTypeArgs
    "ANN003",  # MissingTypeKwargs
    "COM812",  # Missing trailing comma
    "EM101",   # Exception must not use a string literal, assign to variable first
    "EM102",   # Exception must not use an f-string literal, assign to variable first
    "ERA001",  # Found commented-out code
    "FBT001",  # Boolean-typed positional argument in function definition
    "FBT002",  # Boolean default positional argument in function definition
    "FBT003",  # Boolean positional value in function call
    "FIX002",  # Line contains TODO, consider resolving the issue
    "G004",    # Logging statement uses f-string
    "PLR0913", # Too many arguments to function call
    "PLR0915", # Too many statements
    "PLE0605", # Invalid format for `__all__`, must be `tuple` or `list`
    "PLR2004", # Magic value used in comparison
    "PLR0912", # Too many branches
    "RET504",  # Unnecessary variable assignment before `return` statement
    "S301",    # `pickle` and modules that wrap it can be unsafe when used to deserialize untrusted data, possible security issue
    "TD002",   # Missing author in TODO
    "TD003",   # Missing issue link on the line following this TODO
    "TRY003",  # Avoid specifying long messages outside the exception class
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
exclude = ["**/*.ipynb"]

[tool.ruff.format]
quote-style = "double"
exclude = ["**/*.ipynb"]
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101"]
"*_test.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
allow-magic-value-types = ["int", "str"]

[tool.ruff.lint.isort]
known-third-party = ["wandb"]
